--- a/package.json
+++ b/package.json
@@ -20,6 +20,14 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@taiga-ui/addon-charts": "^2.34.0",
+    "@taiga-ui/addon-mobile": "^2.34.0",
+    "@taiga-ui/addon-preview": "^2.34.0",
+    "@taiga-ui/addon-tablebars": "^2.34.0",
+    "@taiga-ui/cdk": "^2.34.0",
+    "@taiga-ui/core": "^2.34.0",
+    "@taiga-ui/icons": "^2.34.0",
+    "@taiga-ui/kit": "^2.34.0",
     "angular-gauge": "^4.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
