--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
     "typescript": "~4.5.2"
   },
   "lint-staged": {
-    "*.{js, ts}": "eslint --cache --fix"
+    "*.ts": "eslint --cache --fix"
   }
 }
