--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,16 @@
-// {
-//     "editor.defaultFormatter": "dbaeumer.vscode-eslint",
-//     "editor.formatOnSave": true,
-//     "eslint.alwaysShowStatus": true,
-//     "editor.codeActionsOnSave": {
-//       "source.fixAll.eslint": true
-//     },
-//     "eslint.validate": [ "javascript", "typescript", "html"],
+{
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+    "editor.formatOnSave": true,
+    "eslint.alwaysShowStatus": true,
+    "editor.codeActionsOnSave": {
+      "source.fixAll.eslint": true
+    },
+    "eslint.validate": [ "javascript", "typescript", "html"],
 
-//     "eslint.options": {
-//       "extensions": [".js", ".ts", "html"]
-//     },
-// }
+    "eslint.options": {
+      "extensions": [".js", ".ts"]
+    },
+    "[html]": {
+      "editor.defaultFormatter": "vscode.html-language-features"
+    },
+}
